{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 26,
  "lineage": "1f814d22-5317-a2ee-7895-4c3d8161c403",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "ansible_vpc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291338242704:route-table/rtb-0a3870260e7e36652",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0c2202ec8b22a32b9",
                "route_table_id": "rtb-0a3870260e7e36652",
                "subnet_id": "subnet-0d78442417af25a75"
              },
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-018fec8adc45eb5d3",
                "route_table_id": "rtb-0a3870260e7e36652",
                "subnet_id": ""
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-0a3870260e7e36652",
            "owner_id": "291338242704",
            "route_table_id": "rtb-0a3870260e7e36652",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e2e81c55a51feff6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": "subnet-0d78442417af25a75",
            "tags": {
              "Name": "Maruthi-VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-01525d8c90bf34d4b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "ansible_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291338242704:vpc/vpc-01525d8c90bf34d4b",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0207555e10041ce91",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0093d6cf87598a3f9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01525d8c90bf34d4b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a3870260e7e36652",
            "owner_id": "291338242704",
            "tags": {
              "Name": "Maruthi-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:291338242704:instance/i-06f4a231f2614edf0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f4a231f2614edf0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ramudu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b647af5b069f389a",
            "private_dns": "ip-10-35-1-178.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.35.1.178",
            "public_dns": "ec2-44-203-30-32.compute-1.amazonaws.com",
            "public_ip": "44.203.30.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d635b065debf506a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e70c69373b2027f2",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicServer-1",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicServer-1",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f6f28e3f1beb798c"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:291338242704:instance/i-01d07ce27d5d2c64a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01d07ce27d5d2c64a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ramudu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ebf26667a2950b18",
            "private_dns": "ip-10-35-2-95.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.35.2.95",
            "public_dns": "ec2-54-83-150-158.compute-1.amazonaws.com",
            "public_ip": "54.83.150.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0546a76789b8caf0d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05aa402ab7cdba393",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicServer-2",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicServer-2",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f6f28e3f1beb798c"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:291338242704:instance/i-00c7c58372bdb6ab0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c7c58372bdb6ab0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ramudu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09c71e2675f0f69c5",
            "private_dns": "ip-10-35-3-110.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.35.3.110",
            "public_dns": "ec2-3-91-201-117.compute-1.amazonaws.com",
            "public_ip": "3.91.201.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e1ec8a0f081d8b7a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c69aabc5fdf5678",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicServer-3",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicServer-3",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f6f28e3f1beb798c"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291338242704:internet-gateway/igw-0b98cff8a92bc1290",
            "id": "igw-0b98cff8a92bc1290",
            "owner_id": "291338242704",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-IGW",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-IGW",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-04930d617f1c77e0c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peer_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-057511440dcda6e9e179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-057511440dcda6e9e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0e40f383298a5c7a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_vpc.default",
            "aws_vpc_peering_connection.manu",
            "data.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peeringfromansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.35.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a3870260e7e366522028132907",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a3870260e7e36652",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0e40f383298a5c7a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default",
            "aws_vpc_peering_connection.manu",
            "data.aws_route_table.ansible_vpc_rt",
            "data.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291338242704:route-table/rtb-02500cc7eafe515a5",
            "id": "rtb-02500cc7eafe515a5",
            "owner_id": "291338242704",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-Private-RT",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-Private-RT",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-04930d617f1c77e0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291338242704:route-table/rtb-057511440dcda6e9e",
            "id": "rtb-057511440dcda6e9e",
            "owner_id": "291338242704",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b98cff8a92bc1290",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-MAIN-RT",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-MAIN-RT",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-04930d617f1c77e0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7eb562ca8c127c0",
            "route_table_id": "rtb-02500cc7eafe515a5",
            "subnet_id": "subnet-0033fe3f6d445af7d"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a811646ffd27139f",
            "route_table_id": "rtb-02500cc7eafe515a5",
            "subnet_id": "subnet-02b1fabd4ae4c3205"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0446b0a2ad1b93072",
            "route_table_id": "rtb-02500cc7eafe515a5",
            "subnet_id": "subnet-0f4ec607d6ab0f688"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b61c223dfac5d798",
            "route_table_id": "rtb-057511440dcda6e9e",
            "subnet_id": "subnet-0e70c69373b2027f2"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044bddaf9ea605fc5",
            "route_table_id": "rtb-057511440dcda6e9e",
            "subnet_id": "subnet-05aa402ab7cdba393"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b26960831e54dbd",
            "route_table_id": "rtb-057511440dcda6e9e",
            "subnet_id": "subnet-07c69aabc5fdf5678"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291338242704:security-group/sg-0f6f28e3f1beb798c",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6f28e3f1beb798c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.1.1.0/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.1.0/32"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.2.1.0/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "291338242704",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04930d617f1c77e0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291338242704:subnet/subnet-0033fe3f6d445af7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.35.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0033fe3f6d445af7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291338242704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-PrivateSubnet-1",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-PrivateSubnet-1",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-04930d617f1c77e0c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291338242704:subnet/subnet-02b1fabd4ae4c3205",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.35.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b1fabd4ae4c3205",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291338242704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-PrivateSubnet-2",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-PrivateSubnet-2",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-04930d617f1c77e0c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291338242704:subnet/subnet-0f4ec607d6ab0f688",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.35.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4ec607d6ab0f688",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291338242704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-PrivateSubnet-3",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-PrivateSubnet-3",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-04930d617f1c77e0c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291338242704:subnet/subnet-0e70c69373b2027f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.35.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e70c69373b2027f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291338242704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicSubnet-1",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicSubnet-1",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-04930d617f1c77e0c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291338242704:subnet/subnet-05aa402ab7cdba393",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.35.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05aa402ab7cdba393",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291338242704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicSubnet-2",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicSubnet-2",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-04930d617f1c77e0c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291338242704:subnet/subnet-07c69aabc5fdf5678",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.35.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c69aabc5fdf5678",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291338242704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicSubnet-3",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicSubnet-3",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-04930d617f1c77e0c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291338242704:vpc/vpc-04930d617f1c77e0c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.35.0.0/16",
            "default_network_acl_id": "acl-0ab9857cb2bd8b477",
            "default_route_table_id": "rtb-03ef4f54e60ffbcdc",
            "default_security_group_id": "sg-0396bf404d29f338c",
            "dhcp_options_id": "dopt-0093d6cf87598a3f9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04930d617f1c77e0c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03ef4f54e60ffbcdc",
            "owner_id": "291338242704",
            "tags": {
              "Name": "DevSecOpsB35",
              "Owner": "Sreeharsha Veerapalli",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes",
              "environment": "production"
            },
            "tags_all": {
              "Name": "DevSecOpsB35",
              "Owner": "Sreeharsha Veerapalli",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes",
              "environment": "production"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "manu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": true,
            "id": "pcx-0e40f383298a5c7a9",
            "peer_owner_id": "291338242704",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-01525d8c90bf34d4b",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags": {
              "Name": "MyVpcPeeringConnection"
            },
            "tags_all": {
              "Name": "MyVpcPeeringConnection"
            },
            "vpc_id": "vpc-04930d617f1c77e0c"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_vpc.ansible_vpc"
          ]
        }
      ]
    }
  ]
}